= 2.16.0 (2016-07-13)

* Add type_routing plugin, for routing based on path extensions and Accept headers (Papierkorb, jeremyevans) (#75)

* Add unescape_path plugin, for decoding URL-encoded PATH_INFO before routing (jeremyevans) (#74)

* Add request_headers plugin, for simpler access to request headers (celsworth) (#72)

= 2.15.0 (2016-06-13)

* Add public plugin for r.public method for serving all files in the public directory (jeremyevans)

* Make send_file in sinatra_helpers plugin work with Rack 2 (jeremyevans)

* Make :header matcher prefixes the env key with HTTP_ if application :header_matcher_prefix option is set (timothypage, jeremyevans) (#69)

* Add content_for plugin :append option to support appending to the existing content (evanleck, jeremyevans) (#66)

= 2.14.0 (2016-05-13)

* Add symbol_status plugin for using symbols as status codes (Papierkorb) (#65)

* Make middleware plugin also run the application's middleware (jeremyevans)

= 2.13.0 (2016-04-14)

* Add :check_paths and :allowed_paths to render plugin options to avoid security issues with template rendering (jeremyevans)

= 2.12.0 (2016-03-15)

* Allow error handler access to the request's remaining_path (jeremyevans)

* Add optimized_string_matchers plugin, containing optimized matchers for single string arguments (jeremyevans)

* Optimize string matching code for strings without placeholders for up to a 60% performance increase (jeremyevans)

* Optimize symbol matching code for up to a 60% performance increase (jeremyevans)

= 2.11.0 (2016-02-16)

* Support :scope option in render plugin, for specifying object in which to evaluate the template (jeremyevans)

* Make minjs compressor support in assets plugin support latest version of Minjs (jeremyevans)

* Add params_capturing plugin, for storing matcher captures in the request params (jeremyevans)

= 2.10.0 (2016-01-15)

* Do not override existing Content-Type header in json plugin (jeremyevans)
