@@ -1,13 +1,12 @@
 require File.expand_path("spec_helper", File.dirname(File.dirname(__FILE__)))
 
 describe "run_append_slash plugin" do
-
   before do
-
     sub2 = app do |r|
       r.root do
         'sub-bar-root'
       end
+
       r.get 'baz' do
         'sub-bar-baz'
       end
@@ -17,33 +16,30 @@ describe "run_append_slash plugin" do
       r.root do
         'sub-root'
       end
+
       r.get 'foo' do
         'sub-foo'
       end
+
       r.on 'bar' do
         r.run sub2
       end
     end
 
     app(:bare) do
-
       route do |r|
-
         r.root do
           'root'
         end
+
         r.on 'sub' do
           r.run sub1
         end
-
       end
-
     end
-
   end
 
   it "internally appends a missing trailing slash to #run sub apps" do
-
     # Without append slash
     body.must_equal 'root'
     status('/sub').must_equal 404
@@ -53,7 +49,6 @@ describe "run_append_slash plugin" do
     body('/sub/bar/').must_equal 'sub-bar-root'
     body('/sub/bar/baz').must_equal 'sub-bar-baz'
     status('/sub/bar/baz/').must_equal 404
-
 
     # With append slash
     app.plugin :run_append_slash
@@ -65,7 +60,6 @@ describe "run_append_slash plugin" do
     body('/sub/bar/').must_equal 'sub-bar-root'
     body('/sub/bar/baz').must_equal 'sub-bar-baz'
     status('/sub/bar/baz/').must_equal 404
-
   end
 
   it "redirects #run sub apps when trailing slash is missing" do
@@ -80,5 +74,4 @@ describe "run_append_slash plugin" do
     body('/sub/bar/baz').must_equal 'sub-bar-baz'
     status('/sub/bar/baz/').must_equal 404
   end
-
 end
