@@ -1,3 +1,7 @@
+= HEAD
+
+* Add run_append_slash plugin, so r.run uses "/" instead of "" for app's PATH_INFO (kenaniah) (#77)
+
 = 2.16.0 (2016-07-13)
 
 * Add type_routing plugin, for routing based on path extensions and Accept headers (Papierkorb, jeremyevans) (#75)
